# rmf_inorbit_dashboard

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-dashboard-workflow.yml
docker/: Dockerfile  README.md  build.sh  install_deps.sh  requirements.txt  requirements_python.txt  requirements_ros.txt  run.sh
launch/: rest_server.launch.py  server.launch.py  ws_server.launch.py
rmf_inorbit_dashboard/client/web-dashboard/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  vite.config.js
rmf_inorbit_dashboard/client/web-dashboard/src/: App.jsx  index.css  main.jsx
rmf_inorbit_dashboard/client/web-dashboard/src/components/accordion_component/: AccordionComponent.css  AccordionComponent.jsx
rmf_inorbit_dashboard/client/web-dashboard/src/components/adapter_config_dialog/: AdapterConfigDialog.css  (+1 more)
rmf_inorbit_dashboard/client/web-dashboard/src/containers/: Map.container.js  Menus.container.js  Robots.container.js  index.jsx
rmf_inorbit_dashboard/client/web-dashboard/src/hooks/: useFileInputParser.js  useFormValidator.js  useWebSocketMessagesParsers.js
rmf_inorbit_dashboard/server/: TaskRequester.py  rest_server.py  ws_server.py
rmf_inorbit_dashboard/server/examples/websocket/: fleet_state_update.json  task_log_update.json  task_state_update.json
rmf_inorbit_dashboard/server/models/: SubmissionError.py  SubmissionResponse.py  TaskDescription.py
rmf_inorbit_dashboard/server/test/: ws_test_client.py
static/: index.html
static/assets/: index-7050996a.css  index-f52c9e70.js
(+10 files in other folders)
